--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,12 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+
+
+  font-family: 'Futura'(sans-serif);
+  background-color: #db635d;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
-
